added html files

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,8 +63,8 @@
             {% block main %}{% endblock %}
         </main>
 
-        <footer class="small text-center text-muted">
-            Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
+        <footer class="text-center">
+            Birthday Meet by Ran (Andy) Gong
         </footer>
 
     </body>
