--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Register</h1>
+    <h1 class="display-5 fw-bold">Register</h1>
     <form action="/register" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
@@ -52,7 +52,7 @@
         <p style="color: red;">{{ birthday_error }}</p>
         {% endif %}
         <div class="form-group">
-            <button class="btn btn-primary" type="submit">Log In</button>
+            <button class="btn btn-primary" type="submit">Register</button>
         </div>
     </form>
 {% endblock %}
