--- a/templates/index.html
+++ b/templates/index.html
@@ -1,46 +1,22 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Overview
+    Home Page
 {% endblock %}
 
 {% block main %}
-    <div class="section">
-
-                <h1>Account Overview</h1>
-                <h2>Username: {{ username }}</h2>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Stock Symbol</th>
-                            <th>Quantity</th>
-                            <th>Current Market Price</th>
-                            <th>Total Value</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!--expecting a list of dictionaries as stocks_held-->
-                        {% for stock_held in stocks_held %}
-                            <tr>
-                                <td>{{ stock_held["symbol"] }}</td>
-                                <td>{{ stock_held["quantity"] }}</td>
-                                <td>{{ stock_held["price"]}}</td>
-                                <td>{{ stock_held["total_value"]}}</td>
-                            </tr>
-                        {% endfor %}
-                        <tr>
-                            <td>Cash Balance</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>{{ cash_balance}}</td>
-                        </tr>
-                        <tr>
-                            <td>TOTAL</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>{{ total_balance}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+<!DOCTYPE html>
+<h1 class="display-5 fw-bold">Hello There!</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead">
+            {Intro to Birthday Meet}
+        </p>
+        <p class="lead">
+            {Want to start? register or login!}
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="/register"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Register Now!</button></a>
+            <a href="/login"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Log In</button></a>
+        </div>
+    </div>
 {% endblock %}
