--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Log In</h1>
+    <h1 class="display-5 fw-bold">Log In</h1>
     <form action="/login" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
