--- a/templates/explore.html
+++ b/templates/explore.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Overview
+    Explore
 {% endblock %}
 <!--list_of_potential_friends (a dict of user's username AND id) (in html first check if it's empty) (can access data with dot notation or square bracket: dict.value or dict["value"])-->
 <!--                if list is empty display diff messages-->
