changed the h1 title

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -16,7 +16,7 @@
     </header>
 {% endif %}
 
-<h1 class="display-5 fw-bold">Overview</h1>
+<h1 class="display-5 fw-bold">Explore</h1>
 <h2 class="display-5 fw-bold">Username: {{username}}</h2>
 {% if list_of_potential_friends %}
     {% for potential_friend in list_of_potential_friends %}
