--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,6 +37,7 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/explore">Explore</a></li>
                         <li class="nav-item"><a class="nav-link" href="/requests">Requests</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
                         <li class="nav-item"><a class="nav-link" href="/messages">Messages</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
