--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,9 @@
         <div class="form-group">
             <input class="form-control" name="password" placeholder="Password" type="password">
         </div>
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
 {% endblock %}
