fixed button text

--- a/templates/send.html
+++ b/templates/send.html
@@ -26,6 +26,6 @@
         {% if error_message %}
             <p style="color: red;">{{ error_message }}</p>
         {% endif %}
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary" type="submit">Send!</button>
     </form>
 {% endblock %}
