--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,7 @@
                         <li class="nav-item"><a class="nav-link" href="/requests">Requests</a></li>
                         <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
                         <li class="nav-item"><a class="nav-link" href="/messages">Messages</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
