--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,4 @@
+/*Many of this file is used as a template from cs50 finance*/
 nav .navbar-brand
 {
     /* size for brand */
@@ -22,23 +23,23 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
-main .form-control
-{
+/*main .form-control*/
+/*{*/
     /* Center form controls */
-    display: inline-block;
+/*    display: inline-block;*/
 
     /* Override Bootstrap's 100% width for form controls */
-    width: auto;
-}
+/*    width: auto;*/
+/*}*/
 
-main
-{
+/*main*/
+/*{*/
     /* Scroll horizontally as needed */
-    overflow-x: auto;
+/*    overflow-x: auto;*/
 
     /* Center contents */
-    text-align: center;
-}
+/*    text-align: center;*/
+/*}*/
 
 main img
 {
