--- a/static/styles.css
+++ b/static/styles.css
@@ -46,3 +46,13 @@ main img
     /* Constrain images on small screens */
     max-width: 100%;
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: grey;
+  color: white;
+  text-align: center;
+}
