--- a/static/styles.css
+++ b/static/styles.css
@@ -56,3 +56,10 @@ footer {
   color: white;
   text-align: center;
 }
+.logo-image{
+    width: 46px;
+    height: 46px;
+    border-radius: 30%;
+    overflow: hidden;
+    margin-top: -6px;
+}
