--- a/templates/overview.html
+++ b/templates/overview.html
@@ -3,26 +3,22 @@
 {% block title %}
     Overview
 {% endblock %}
-<!--username=username,-->
-<!--                                birth_month=birth_month,-->
-<!--                                birth_month_name = birth_month_name,-->
-<!--                                birth_day=birth_day,-->
-<!--                                number_of_requests=number_of_requests,-->
-<!--                                number_of_unread_messages=number_of_unread_messages,-->
-<!--                                number_of_potential_friends=number_of_potential_friends)-->
 {% block main %}
 <h1 class="display-5 fw-bold">Overview</h1>
-<h2 class="display-5 fw-bold">Username: {{username}}</h2>
-<h2 class="display-5 fw-bold">Birthday: {{birth_month_name}} {{ birth_day }}</h2>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead">
-            Number of friend requests: {{ number_of_requests }}
-        </p>
-        <p class="lead">
-            Number of unread messages: {{ number_of_unread_messages }}
-        </p>
-        <p class="lead">
-            Number of potential friends: {{ number_of_potential_friends }}
-        </p>
-    </div>
+<h2 class="display-5 fw-bold align-center">Welcome, {{username}}</h2>
+<h2 class="display-5 fw-bold align-center">Birthday: {{birth_month_name}} {{ birth_day }}</h2>
+<hr>
+<div class="col-lg-6 mx-auto">
+    <h1 class="display-5 fw-bold">
+        {{ number_of_requests }} Friend Requests
+    </h1>
+    <hr>
+    <h1 class="display-5 fw-bold">
+        {{ number_of_unread_messages }} Unread Messages
+    </h1>
+    <hr>
+    <h1 class="display-5 fw-bold">
+        {{ number_of_potential_friends }} Potential Friends to be Added
+    </h1>
+</div>
 {% endblock %}
