--- a/templates/overview.html
+++ b/templates/overview.html
@@ -5,20 +5,20 @@
 {% endblock %}
 {% block main %}
 <h1 class="display-5 fw-bold">Overview</h1>
-<br>
-<h2 class="display-5 fw-bold align-center">Welcome, {{username}}</h2>
-<h2 class="display-5 fw-bold align-center">Birthday: {{birth_month_name}} {{ birth_day }}</h2>
 <hr>
-<div class="col-lg-6 mx-auto">
-    <h1 class="display-5 fw-bold">
+<h2 class="display-5 align-center">Welcome, {{username}}</h2>
+<h2 class="display-5 align-center">Birthday: {{birth_month_name}} {{ birth_day }}</h2>
+<hr>
+<div class="col-lg-8 mx-auto">
+    <h1 class="display-5">
         {{ number_of_requests }} Friend Requests
     </h1>
     <hr>
-    <h1 class="display-5 fw-bold">
+    <h1 class="display-5">
         {{ number_of_unread_messages }} Unread Messages
     </h1>
     <hr>
-    <h1 class="display-5 fw-bold">
+    <h1 class="display-5">
         {{ number_of_potential_friends }} Potential Friends to be Added
     </h1>
 </div>
