--- a/templates/explore.html
+++ b/templates/explore.html
@@ -9,20 +9,34 @@
 {% block main %}
 
 <h1 class="display-5 fw-bold">Explore</h1>
+<hr>
 {% if list_of_potential_friends %}
+    <h2 class="display-5 align-center">These people share your birthday:</h2>
+    <br>
+    <br>
     {% for potential_friend in list_of_potential_friends %}
         <form action="/explore" method="post">
-        <div class="form-group">
-            <p class="lead">
-                {{ potential_friend.username }}
-            </p>
             <input type="hidden" name="receiver_id" value="{{ potential_friend.id }}">
-            <input type="search" class="form-control" autocomplete="off" name="request_message" placeholder="Request message (can leave blank)" type="text">
-            <button class="btn btn-primary" type="submit">Send Friend Request!</button>
-        </div>
+                <h4>
+                    <!--Make buttons and textbox side by side-->
+                    <!--https://stackoverflow.com/questions/10615872/bootstrap-align-input-with-button-->
+                    <span>{{ potential_friend.username }}</span>
+                    <div class="float-right">
+                        <div class="input-group mb-3">
+                            <div class="col-xs-4">
+                                <input type="search" class="form-control" autocomplete="off" name="request_message" placeholder="Request message" type="text">
+                            </div>
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="submit">Send Friend Request!</button>
+                            </div>
+                        </div>
+                    </div>
+                </h4>
         </form>
+        <br>
     {% endfor %}
 {% else %}
-    NO FRIEND LMAO
+    <h2 class="display-5 fw-bold align-center">You have already added everyone we have with your birthday!</h2>
+    <h4 class="display-5 fw-bold align-center">Try messaging your exiting friends, or ask your friends IRL to join Birthday Meet!</h2>
 {% endif %}
 {% endblock %}
