formatted contact.html, added some messages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,9 @@
 
 {% block main %}
     <h1 class="display-5 fw-bold">Contact Us!</h1>
+    <h4 class="display-5 fw-bold">Send a message to us (the creators of this website) for bugs and potential improvement suggestions!</h4>
+    <h4 class="display-5 fw-bold">Don't worry, only we can read your message</h4>
+    <h6 class="display-5 fw-bold">BTW: One user can only send 1 message per day!</h6>
     <form action="/contact" method="post">
         <div class="form-group">
             <label for="messageTextBox">Your message:</label>
