added horizontal lines to explore and contact

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -13,7 +13,7 @@
 {% if list_of_potential_friends %}
     <h2 class="display-5 align-center">These people share your birthday:</h2>
     <h4 class="display-5 fw-bold align-center">Send a friend request! (100 Characters max)</h2>
-    <h4 class="display-5 fw-bold align-center">Leave "Request message" blank to send the default friend request!gi</h2>
+    <h4 class="display-5 fw-bold align-center">Leave "Request message" blank to send the default friend request!</h2>
     <br>
     <br>
     {% for potential_friend in list_of_potential_friends %}
