--- a/templates/messages.html
+++ b/templates/messages.html
@@ -38,17 +38,21 @@
                     <span style="font-weight: bold;">{{ message.sender_username }}</span> sent on <span style="font-weight: bold;">{{ message.time_sent }}</span>
                 </h4>
             </div>
-            <div class="row" style="
-                background: #ffff00;
-                padding-left: 20px;
-                padding-right: 20px;
-                width: 100%;
-                text-align: left;
-            ">
-                <p>
-                    {{ message.message }}
-                </p>
-            </div>
+            {% for line in message.message %}
+                <div class="row" style="
+                    background: #ffff00;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    width: 100%;
+                    text-align: left;
+                ">
+
+                    <p>
+                        {{ line }}
+                    </p>
+
+                </div>
+            {% endfor %}
             <div class="row justify-content-between"style="
                 border-radius: 0px 0px 20px 20px;
                 background: #ffff00;
