--- a/templates/sent.html
+++ b/templates/sent.html
@@ -20,27 +20,63 @@
 </h1>
 <hr>
 {% if list_of_messages_info %}
+    <h2 class="display-5 align-center">List of all sent messages:</h2>
     {% for message in list_of_messages_info %}
-        <p class="lead">
-            To: {{ message.receiver_username }}
-        </p>
-        <p class="lead">
-            Time Sent: {{ message.time_sent }}
-        </p>
-        <p class="lead">
-            "{{ message.message }}"
-        </p>
-        {% if message.is_read %}
-            <p class="lead">
-                read
-            </p>
-        {% else %}
-            <p class="lead">
-                unread
-            </p>
-        {% endif %}
+        <!--https://www.w3schools.com/css/css3_borders.asp-->
+        <div class="container-fluid">
+            <div class="row" style="
+            border-radius: 30px 30px 0px 0px;
+            background: #73AD21;
+            padding-left: 20px;
+            width: 100%;
+            text-align: left;
+        ">
+                <h4 class="display-5">
+                    To <span style="font-weight: bold;">{{ message.receiver_username }}</span>, sent on <span style="font-weight: bold;">{{ message.time_sent }}</span>
+                </h4>
+            </div>
+            {% for line in message.message %}
+                <div class="row" style="
+                    background: #ffff00;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    width: 100%;
+                    text-align: left;
+                ">
+
+                    <p>
+                        {{ line }}
+                    </p>
+
+                </div>
+            {% endfor %}
+            <div class="row justify-content-between"style="
+                border-radius: 0px 0px 20px 20px;
+                background: #ffff00;
+                padding-left: 20px;
+                padding-right: 20px;
+                width: 100%;
+                text-align: left;
+            ">
+                {% if message.is_read %}
+                <div class="col-4">
+                    <h4>
+                        Read
+                    </h4>
+                </div>
+                {% else %}
+                <div class="col-4">
+                    <h4>
+                        Unead
+                    </h4>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        <br>
     {% endfor %}
 {% else %}
-    You have not yet sent any message
+    <h2 class="display-5 fw-bold align-center">You have sent no messages at this moment</h2>
+    <h4 class="display-5 fw-bold align-center">Add some friends, or send a message to your friends now!</h4>
 {% endif %}
 {% endblock %}
