--- a/templates/sent.html
+++ b/templates/sent.html
@@ -19,6 +19,7 @@
     </div>
 </h1>
 <hr>
+<h6 class="display-5 fw-bold align-center">You can only send/receive messages to/from your friends</h6>
 {% if list_of_messages_info %}
     <h2 class="display-5 align-center">List of all sent messages:</h2>
     {% for message in list_of_messages_info %}
