--- a/templates/messages.html
+++ b/templates/messages.html
@@ -29,33 +29,60 @@
         <div class="container-fluid">
             <div class="row" style="
             border-radius: 30px 30px 0px 0px;
-            background: #73AD21;
+            background: #4b8ffa;
             padding-left: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
             width: 100%;
             text-align: left;
         ">
-                <h4 class="display-5">
+                <h4 class="display-5" style="color: white;">
                     <span style="font-weight: bold;">{{ message.sender_username }}</span> sent on <span style="font-weight: bold;">{{ message.time_sent }}</span>
                 </h4>
             </div>
-            {% for line in message.message %}
-                <div class="row" style="
-                    background: #ffff00;
+            <div class="row" style="
+                    background: #ffffff;
+                    border-style: solid;
+                    border-width: 0px 1px;
+                    border-color: #4b8ffa;
                     padding-left: 20px;
                     padding-right: 20px;
                     width: 100%;
                     text-align: left;
                 ">
-
-                    <p>
+                    <br>
+                </div>
+            {% for line in message.message %}
+                <div class="row" style="
+                    background: #ffffff;
+                    border-style: solid;
+                    border-width: 0px 1px;
+                    border-color: #4b8ffa;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    width: 100%;
+                    text-align: left;
+                ">
                         {{ line }}
-                    </p>
-
                 </div>
             {% endfor %}
+            <div class="row" style="
+                    background: #ffffff;
+                    border-style: solid;
+                    border-width: 0px 1px;
+                    border-color: #4b8ffa;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    width: 100%;
+                    text-align: left;
+                ">
+                    <br>
+                </div>
             <div class="row justify-content-between"style="
                 border-radius: 0px 0px 20px 20px;
-                background: #ffff00;
+                background: #4b8ffa;
+                padding-top: 10px;
+                padding-bottom: 10px;
                 padding-left: 20px;
                 padding-right: 20px;
                 width: 100%;
@@ -63,21 +90,21 @@
             ">
                 {% if message.is_read %}
                 <div class="col-4">
-                    <h4>
+                    <h4 style="color: white; verticle-align: middle;">
                         Read
                     </h4>
                 </div>
                 {% else %}
                 <div class="col-4">
-                    <h4>
+                    <h4 style="color: white; verticle-align: middle;">
                         Unead
                     </h4>
                 </div>
-                <div class="col-8" style="text-align: right;">
+                <div class="col-8" style="text-align: right; verticle-align: middle;">
                     <form action="/messages" method="post">
                         <div class="form-group">
                             <input type="hidden" name="message_id" value="{{ message.id }}">
-                            <button class="btn btn-secondary" type="submit">Mark as read</button>
+                            <button class="btn btn-light" type="submit">Mark as read</button>
                         </div>
                     </form>
                 </div>
