--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,22 @@
 {% endblock %}
 
 {% block main %}
-<h1 class="display-5 fw-bold">Hello There!</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead">
-            {Intro to Birthday Meet}
-        </p>
-        <p class="lead">
-            {Want to start? register or login!}
-        </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="/register"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Register Now!</button></a>
-            <a href="/login"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Log In</button></a>
+<div class="container col-xxl-8 px-4">
+    <div class="row flex-lg-row-reverse align-items-center g-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+            <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Birthday Meet" width="700" height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Welcome to Birthday Meet!</h1>
+            <p class="lead">Have you ever had the thought of meeting someone who shares your birthday, but it just seems impossible to meet anyone like that?</p>
+            <p class="lead">Well, Birthday Meet is the solution to that problem! With this online social platform, you can easily find other people who share your birthday and send message to them to make new friends!</p>
+            <p class="lead">To start, simply click the "Register Now!" button to register a new account, or click "Log In" if you are an existing user.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <a href="/register"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Register Now!</button></a>
+                <a href="/login"><button type="button" class="btn btn-outline-secondary btn-lg px-4">Log In</button></a>
+            </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
