--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <div class="container col-xxl-8 px-4">
     <div class="row flex-lg-row-reverse align-items-center g-5">
         <div class="col-10 col-sm-8 col-lg-6">
-            <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Birthday Meet" width="700" height="500" loading="lazy">
+            <img src="/static/logo.png" class="d-block mx-lg-auto img-fluid" alt="Birthday Meet" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">Welcome to Birthday Meet!</h1>
