--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,7 @@
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
-        <link href="/static/favicon.ico" rel="icon">
+        <link href="/static/logo.png" rel="icon" type="image/png" sizes="16x16">
 
         <link href="/static/styles.css" rel="stylesheet">
 
@@ -30,12 +29,9 @@
             <!--Span determines the colour of the text-->
             <a class="navbar-brand" href="/">
                 <!--https://github.com/creativetimofficial/material-kit/issues/107-->
-                <div class="logo-image">
-                    <img src="/static/cake-sign-icon-vector-23782623.jpg" class="img-fluid">
+                <div class="logo-image" style="width: 250px; height: 50px;">
+                    <img src="/static/BirthdayMeetText.png" class="img-fluid" style="vertical-align: middle;">
                 </div>
-            </a>
-            <a class="navbar-brand" href="/">
-                <span class="blue">Birthday</span> <span class="green">Meet</span>
             </a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
