stupid spelling error

--- a/templates/sent.html
+++ b/templates/sent.html
@@ -95,7 +95,7 @@
                 {% else %}
                 <div class="col-4">
                     <h4 style="color: white; verticle-align: middle;">
-                        Unead
+                        Unread
                     </h4>
                 </div>
                 {% endif %}
