--- a/templates/messages.html
+++ b/templates/messages.html
@@ -97,7 +97,7 @@
                 {% else %}
                 <div class="col-4">
                     <h4 style="color: white; verticle-align: middle;">
-                        Unead
+                        Unread
                     </h4>
                 </div>
                 <div class="col-8" style="text-align: right; verticle-align: middle;">
